fixed switches contains for dark mode

--- a/httpdocs/css/dark-mode.css
+++ b/httpdocs/css/dark-mode.css
@@ -264,3 +264,7 @@ text, g text.tick {
   background: transparent !important;
   color: #ccc !important; 
 }
+
+.switches-list-container {
+  background: none  !important;
+}
